# SelecApp

./: .env.example  .gitignore  ACCESO_SUPER_ADMIN.md  ADMIN_ACCESS.md  ANALISIS_BD_BUENAS_PRACTICAS.md  CAMBIOS_DASHBOARD_TESTIGO.md  CANDIDATOS_SISTEMA_COMPLETADO.md  CHECKLIST_CORRECCION_OCR.md  CONVENCION_ZONAS_DIVIPOLA.md  CORRECCION_CARGA_AUTOMATICA.md  CORRECCION_CARGA_OCR.md  CORRECCION_CONEXION_BD.md  CORRECCION_REGISTRO_GESTION_USUARIOS.md  CORRECCION_ZONAS_NUMERICAS.md  DASHBOARDS_FUNCIONALIDAD_COMPLETA.md  DASHBOARD_TESTIGO_MEJORADO.md  DATOS_COMPLETOS_SISTEMA.md  ESPECIFICACION_DASHBOARD_TESTIGO_COMPLETA.md  ESTRUCTURA_DIVIPOLA_IMPLEMENTADA.md  GENERACION_AUTOMATICA_USUARIOS.md  GIT_COMMIT_RESUMEN.md  GUIA_RAPIDA_TESTIGO.md  GUIA_USO_ACTUAL_SISTEMA.md  HTML_REQUIREMENTS_GAP_ANALYSIS.md  IMPLEMENTACION_OCR_E14.md  INDICE_CORRECCION_OCR.md  INSTALAR_OCR_REAL.md  INSTALAR_TESSERACT_WINDOWS.md  INSTRUCCIONES_PRUEBA_OCR.md  LICENSE  LIMPIEZA_PROYECTO.md  MEJORAS_DASHBOARD_TESTIGO.md  MEJORAS_SISTEMA_COMPLETO.md  MEJORA_UBICACION_POR_ROL.md  MODULO_REPORTES_COMPLETADO.md  NUEVAS_FUNCIONALIDADES_DASHBOARD.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_INSTALLATION_STATUS.md  README.md  README_PRODUCCION.md  (+142 more)
.github/workflows/: ci.yml
_archivos_para_eliminar/: ARQUITECTURA_MODULAR.md  COORDINACION_MUNICIPAL_IMPLEMENTADA.md  DASHBOARDS_IMPLEMENTADOS.md  DASHBOARD_FUNCTIONALITY_REPORT.md  DATOS_CARGADOS.md  Dockerfile  ESTADO_FINAL_SISTEMA.md  INSTALL_OCR.md  MIGRACION_COMPLETADA.md  MODULOS_USUARIOS_ADMIN_COMPLETADOS.md  OCR_READY.md  README_ARCHIVOS_MOVIDOS.md  README_UV.md  REQUERIMIENTOS_TESTIGO_CONSOLIDADOS.md  RESUMEN_REVISION_FINAL.md  ROLES_UPDATED_STRUCTURE.md  ROLES_VERIFICATION_COMPLETE.md  SISTEMA_COMPLETO_UV.md  SISTEMA_ELECTORAL_COMPLETADO.md  SYSTEM_SUMMARY.md  TEMPLATES_ANALYSIS.md  TEMPLATES_CLEANUP_REPORT.md  TESTIGO_DASHBOARD_REQUIREMENTS.md  TESTIGO_FLUJO_CORRECTO.md  api_endpoints.py  app_modular.py  check_candidates.py  check_coordination_tables.py  check_database.py  config_production.py  create_candidate_tables.py  create_missing_routes.py  database_summary.py  deploy.sh  docker-compose.yml  entrypoint.sh  final_system_test.py  final_verification.py  fix_coordination_tables.py  fix_templates.py  (+31 more)
api/: admin_api.py  auth_api.py  candidate_api.py  coordination_api.py  municipal_coordination_api.py  system_api.py  testigo_api.py  ubicacion_api.py
config/: __init__.py  app_config.py  constants.py  database.py
core/: api.py  auth.py  database.py  permissions.py
docs/: index.md
modules/admin/: __init__.py  models.py  routes.py
modules/candidates/: __init__.py  models.py  routes.py  services.py
modules/coordination/: __init__.py  models.py  routes.py
modules/dashboard/: __init__.py  models.py  routes.py  services.py
modules/electoral/: __init__.py  routes.py  services.py
modules/reports/: __init__.py  models.py  routes.py  services.py
modules/testigo/: __init__.py
modules/users/: __init__.py  models.py  routes.py  services.py
scripts/: backup.sh
scripts/database/: __init__.py  create_tables.py
services/: admin_panel_service.py  candidate_management_service.py  candidate_reporting_service.py  coordination_service.py  e14_candidate_integration_service.py  excel_import_service.py  municipal_coordination_service.py  ocr_e14_service.py  priority_service.py
static/css/: base.css  mobile-responsive.css
static/js/: base.js  coordination-dashboard.js  dashboard_data.js
templates/: base.html  dashboard.html  dashboard_generic.html  dashboard_home.html  error.html  index.html  index_home.html  login.html  login_mejorado.html  login_registro.html  test_login.html
templates/admin/: candidatos.html  importar_excel.html  prioridades.html
tests/: __init__.py  test_candidates.py  test_coordination.py
(+86 files in other folders)
