[project]
name = "sistema-electoral-erp"
version = "1.0.0"
description = "Sistema Electoral ERP modular para Caquetá con interfaces por rol"
authors = [
    {name = "Sistema Electoral Team", email = "dev@electoral-system.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["electoral", "erp", "caqueta", "voting", "politics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.5.3",
    "sqlalchemy>=2.0.23",
    "werkzeug>=2.3.7",
    "bcrypt>=4.0.1",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
    "reportlab>=4.0.7",
    "weasyprint>=60.2",
    "pillow>=10.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "colorlog>=6.8.0",
    "marshmallow>=3.20.1",
    "flask-caching>=2.1.0",
    "flask-mail>=0.9.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
production = [
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/electoral-system/caqueta-erp"
Documentation = "https://electoral-system.readthedocs.io/"
Repository = "https://github.com/electoral-system/caqueta-erp.git"
Issues = "https://github.com/electoral-system/caqueta-erp/issues"

[project.scripts]
electoral-system = "run:main"
electoral-demo = "demo:main"
electoral-test = "test_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=core",
    "--cov=modules",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["core", "modules"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]